--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -111,19 +111,19 @@ TEX_corporate_power_desc:0 "기업의 힘은 미국인들에 승리를 가져다
 
 ### Focuses - Politics ###
 TEX_the_new_republic:0 "신 아메리카 공화국"
-TEX_the_new_republic_desc:0 "미주연합의 승리와 함께 이제는 새로운 미국 공화국을 만들시간이다,시간을 좀 걸리겠지만,미국은 내전의 재로부터 새롭게 태어날것이다."
+TEX_the_new_republic_desc:0 "미주연합의 승리와 함께 이제는 새로운 미국 공화국을 만들시간입니다,시간을 좀 걸리겠지만,미국은 내전의 재로부터 새롭게 태어날것입니다."
 TEX_longs_republic:0 "롱의 공화국"
 TEX_longs_republic_desc:0 "롱을 암살하려는 사악한 계획이 저지되었고, 그 진상이 밝혀졌습니다. 모든 적들은 박멸되어야 하며, 국민들은 위험한 극단주의자들에 맞서기 위해 킹피쉬 곁으로 모여야만 합니다. 휴이 롱이 아메리카를 이끄는 한, 모든 미국의 적들은 제거되어야 합니다!"
 TEX_share_the_wealth:0 "우리의 부를 나누다"
-TEX_share_the_wealth_desc:0 "휴이 롱은 그의 부를 정해진 자들이 공유하는 생각을 싫어하는 극단주의자들에 의해서 발목이 잡혀있다.하지만 이런 공개된 반목에 의해서 그는 이제 미국의 모든 국민들에게 부를 가져다주는 그의 계획을 실행할수 있다!."
+TEX_share_the_wealth_desc:0 "휴이 롱은 그의 부를 정해진 자들이 공유하는 생각을 싫어하는 극단주의자들에 의해서 발목이 잡혀있습니다.하지만 이런 공개된 반목에 의해서 그는 이제 미국의 모든 국민들에게 부를 가져다주는 그의 계획을 실행할수 있습니다!."
 TEX_expand_the_minutemen:0 "미니트맨 확장"
-TEX_expand_the_minutemen_desc:0 "펠리와 극단주의자들의 배반은 미니트맨(민병)에게 인력과 힘을 확장해야할 필요성을 보여주었다. 비록 몇몇은 반대할 가능성도 있지만,이것은 모든 미국인들의 최고의 관심이다. 시민들과 롱 은 그들에게 가해질 야만스러운 공격으로 부터 보호받을 것이다. 시민들의 자유가 약간 희생될수 있지만 이것은 또한 모든 미국인들의 안전을 위한 것이다. "
+TEX_expand_the_minutemen_desc:0 "펠리와 극단주의자들의 배반은 미니트맨(민병)에게 인력과 힘을 확장해야할 필요성을 보여주었습니다. 비록 몇몇은 반대할 가능성도 있지만,이것은 모든 미국인들의 최고의 관심입니다. 시민들과 롱 은 그들에게 가해질 야만스러운 공격으로 부터 보호받을 것입니다. 시민들의 자유가 약간 희생될수 있지만 이것은 또한 모든 미국인들의 안전을 위한 것입니다. "
 TEX_loyalty_to_long:0 "지도자에 대한 충성"
 TEX_loyalty_to_long_desc:0 "휴이 롱에 대한 충성심은 반드시 굳건해야만 합니다. 공화국을 안전하게 지켜낼 휴이 롱은 미국의 보호자이자 구원자입니다. 우리는 더 이상 펠리 같은 독사가 미국에 침투하지 못하게 해야 합니다. 사람들이 휴이 롱에게 충성하는 한, 반역자들은 결코 미국을 위협하지 못할 것입니다."
 TEX_perfect_dictatorship:0 "이곳에서 일어날 수 있는 일이다!"
-TEX_perfect_dictatorship_desc:0 "만약 한 사람이 시민들에게로 부터 모든것을 위임받고 그들의 원한것을 진행한다면 그는 독재자가 아니다. 완벽한 민주주의는 모든 사람들이 만족하여 불만이 없고 이는 독재로 보일수도 있다."
+TEX_perfect_dictatorship_desc:0 "만약 한 사람이 시민들에게로 부터 모든것을 위임받고 그들의 원한것을 진행한다면 그는 독재자가 아닙니다. 완벽한 민주주의는 모든 사람들이 만족하여 불만이 없고 이는 독재로 보일수도 있습니다."
 TEX_every_man_a_king:0 "모든 사람이 왕이다!"
-TEX_every_man_a_king_desc:0 "이것들이 우리가 제안한 것들이다."모든 사람이 왕이다". 모든사람들은 먹을 것이 있을때 먹고- 모든 사람들은 또한 입을것이 있을때 입는다. 이것은 모두를 왕으로 만든다."
+TEX_every_man_a_king_desc:0 "이것들이 우리가 제안한 것들입니다."모든 사람이 왕이다". 모든사람들은 먹을 것이 있을때 먹고- 모든 사람들은 또한 입을것이 있을때 입습니다. 이것은 모두를 왕으로 만듭니다."
 TEX_spirit_of_america:0 "미국의 정신"
 TEX_spirit_of_america_desc:0 ""
 TEX_fords_vision:0 "포디즘"
@@ -139,17 +139,17 @@ TEX_american_exceptionalism_desc:0 ""
 TEX_jim_crows_america:0 "짐 크로의 미국"
 TEX_jim_crows_america_desc:0 "위대한 휴이 롱 각하께서 암살당하셨습니다! 혼란을 틈타 윌리엄 펠리가 통제권을 잡았고 그는 미국에서 급진적인 극단 주의자의 이상을 실현시킬 계획을 세웠습니다. 그의 주도 아래에서 강력한 인종 차별적 조치가 미국 내에 실현되고 있습니다."
 TEX_protecting_our_race:0 "우리 인종을 보호 하는 것"
-TEX_protecting_our_race_desc:0 "펠리와 극단주의자들은 미국의 순수성을 지킨다는 명분아래에 분명히 인종차별적인 정권을 수립하였다. 이 인종차별적인 정책은 미국내에 있는 백인을 불필요인종과 외국인으로부터 보호할것이다. 이것은 미국의 활기를 되찾고 다시 미국을 번영시킬것이다!."
+TEX_protecting_our_race_desc:0 "펠리와 극단주의자들은 미국의 순수성을 지킨다는 명분아래에 분명히 인종차별적인 정권을 수립하였습니다. 이 인종차별적인 정책은 미국내에 있는 백인을 불필요인종과 외국인으로부터 보호할것입니다. 이것은 미국의 활기를 되찾고 다시 미국을 번영시킬것입니다!."
 TEX_democracy_for_whites:0 "백인을 위한 민주주의"
-TEX_democracy_for_whites_desc:0 "롱은 민주주의를 파괴하고싶어하였지만 우리는 다르다. 우리는 백인만을 위한 민주주의를 보존하고 확장할것이다. 우리의 미국안에서는 오직 문명화되고 순수한 혈통 만이 투표권을 가질것이다. 또한 우리 정권을 반대하는 자들은 투표권을 가지지못하게 할것이다. "
+TEX_democracy_for_whites_desc:0 "롱은 민주주의를 파괴하고싶어하였지만 우리는 다릅니다. 우리는 백인만을 위한 민주주의를 보존하고 확장할것입니다. 우리의 미국안에서는 오직 문명화되고 순수한 혈통 만이 투표권을 가질것입니다. 또한 우리 정권을 반대하는 자들은 투표권을 가지지못하게 할것입니다. "
 TEX_white_welfare:0 "백인을 위한 복지"
-TEX_white_welfare_desc:0 "우리가 지어가고 있는 미국을 파괴하고싶어하는 백인 무정부주의자들이 존재한다. 하지만 우리는 백인 미국인들에게 복지를 제공함으로써 그들은 막을수 있다. 이로써 그들은 우리의 편이 될것이며 우리정권을 반대하는 그들은 막아줄것이다."
+TEX_white_welfare_desc:0 "우리가 지어가고 있는 미국을 파괴하고싶어하는 백인 무정부주의자들이 존재합니다. 하지만 우리는 백인 미국인들에게 복지를 제공함으로써 그들은 막을수 있습니다. 이로써 그들은 우리의 편이 될것이며 우리정권을 반대하는 그들은 막아줄것입니다."
 TEX_america_is_christian:0 "기독교 국가 미국"
-TEX_america_is_christian_desc:0 "옛날 공화국은 신이 존재하지 않았고 시민들의 삶과 정부로부터 신은 배제하였던 공화국이었다. 하지만 미국은 기독교 국가이고 우리는 신이 우리정권에 자리잡도록 확실히 하고 신의 가치가 대표되도록 할것이다."
+TEX_america_is_christian_desc:0 "옛날 공화국은 신이 존재하지 않았고 시민들의 삶과 정부로부터 신은 배제하였던 공화국이었습니다. 하지만 미국은 기독교 국가이고 우리는 신이 우리정권에 자리잡도록 확실히 하고 신의 가치가 대표되도록 할것입니다."
 TEX_new_american_century:0 "새로운 미국의 세기"
-TEX_new_american_century_desc:0 "우리는 새로운 공화국을 수립하였다, 이는 미국을 새로운 시대로 이끌었다. 정부가 백인이 아닌 미국인에게 아량을 배풀던 시간은 지났다, 우리는 짐 크로우를 미국에 퍼트릴것이다. 우리는 새로운 미국을 만들었고 현재는 새로운 미국의 새벽이며 새로운 세기이다. "
+TEX_new_american_century_desc:0 "우리는 새로운 공화국을 수립하였습니다, 이는 미국을 새로운 시대로 이끌었습니다. 정부가 백인이 아닌 미국인에게 아량을 배풀던 시간은 지났습니다, 우리는 짐 크로우를 미국에 퍼트릴것입니다. 우리는 새로운 미국을 만들었고 현재는 새로운 미국의 새벽이며 새로운 세기입니다. "
 TEX_a_new_constitution:0 "새로운 헌법"
-TEX_a_new_constitution_desc:0 "누가 힘의 다툼을 이겼는지는 상관없이 이제는 새로운 헌법을 쓸 시간이다. 이는 새로운 정권을 정의하는데 그리고 우리가 계획해왔던 새로운 아메리칸 공화국을 세우는 것에 도움을 줄것이다. 이제 새로운 미국이 오래된 재에서 태어날 것이다. "
+TEX_a_new_constitution_desc:0 "누가 힘의 다툼을 이겼는지는 상관없이 이제는 새로운 헌법을 쓸 시간입니다. 이는 새로운 정권을 정의하는데 그리고 우리가 계획해왔던 새로운 아메리칸 공화국을 세우는 것에 도움을 줄것입니다. 이제 새로운 미국이 오래된 재에서 태어날 것다. "
 
 ### Focuses - Reconstruction ###
 TEX_reconstruction_policies:0 "정치 구조조정"
