--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -148,10 +148,10 @@ annex.50.t:0 "호헨촐레른가에서 차르를 뽑아라"
 annex.50.d:0 "독일이 호헨촐레른가의 사람을 러시아의 왕좌에 앉혔고, 그는 동방정교회로 개종했지만, '이반 7세'가 러시아를 통치하기는 쉬워보이지 않습니다."
 annex.50.a:0 "대체 역사에는 더 끔찍한 일도 있는법이니까, 뭐."
 annex.51.t:0 "우리의 새로운 총리"
-annex.51.d:0 "A little while ago, Pavel Bermondt-Avalov was been 'suggested' to lead Russia by the Germans and shortly after became our new leader. He has the support of the people if only because we are now no longer fighting the Germans."
+annex.51.d:0 "조금 전에, 독일은 파벨 베르몬트-아벨로프이 러시아를 이끌도록 '제안'되었고, 곧 우리의 새로운 지도자가 되었습니다. 우리가 이제 더 이상 독일과 싸우지 않기 때문에 그는 국민들의 지지를 받고 있습니다."
 annex.51.a:0 "점령보다는 낫지..."
 annex.52.t:0 "미국의 운명"
-annex.52.d:0 "After a long fight on the American continent, we have launched a full offensive and forced Americans to surrender. Washington and the fate of entire America is now in our hands!"
+annex.52.d:0 "아메리카 대륙에서의 오랜 전투 후에, 우리는 전면적인 공격을 개시했고 미국이 항복하도록 했습니다. 워싱턴과 미국 전체의 운명은 이제 우리 손에 달려 있습니다!"
 annex.52.a:0 "미국을 해방하라!"
 annex.52.b:0 "미주 연방과 미국을 해방하라!"
 annex.52.c:0 "미국을 분할하라!"
@@ -159,11 +159,11 @@ annex.52.e:0 "노동 연맹을 해방하라!"
 annex.52.f:0 "아메리카 연합을 해방하라!"
 annex.52.g:0 "점령하라!"
 annex.53.t:0 "버마의 운명"
-annex.53.d:0 "버마 지도부가 망명가거나 감옥에 갇혀있을동안 우리군이 랑군을 행진하고 있습니다. 버마를 어찌해야할까요?"
+annex.53.d:0 "버마 지도부가 망명가거나 감옥에 갇혀있을 동안 우리 군이 랑군을 행진하고 있습니다. 버마를 어찌해야 할까요?"
 annex.53.a:0 "해방하라"
 annex.53.b:0 "점령해라"
 annex.54.t:0 "주데텐란트"
-annex.54.d:0 "The Germans living in the Sudeten mountains will have no problem being part of the Kaiserreich, as they are a large majority in those states. Should we integrate them in our country?"
+annex.54.d:0 "주데텐 산에 살고 있는 독일인들은 그 주의 다수를 차지하고 있기에 카이저라이히에 속하는 것에 아무런 문제가 없을 것입니다. 이들을 우리 나라에 통합시켜야 할까요?"
 annex.54.a:0 "독일을 위해 저 영토를 탈환한다!"
 annex.54.b:0 "아냐, 저들은 진짜 독일인들이 아니다!"
 annex.59.t:0 "포르투갈의 운명"
@@ -192,20 +192,20 @@ annex.62.b:0 "발칸 국가들을 해방하라!"
 annex.62.c:0 "서부 발칸을 세르비아, 크로아티아 그리고 슬로베니아로 나눠라!"
 annex.62.e:0 "군사점령을 계속해라!"
 annex.63.t:0 "뉴 잉글랜드 통합"
-annex.63.d:0 "반동분자스러운 뉴잉글랜드는 이제 완전히 우리조국에 합병됬습니다."
+annex.63.d:0 "반동분자스러운 뉴잉글랜드는 이제 완전히 우리 조국에 합병됬습니다."
 annex.63.a:0 "좋았어!"
 annex.64.t:0 "센트로 아메리카의 운명"
-annex.64.d:0 "The Centroamérican state has been annexed, our troops are parading in Ciudad de Guatemala. A major threat to the stability in the region has been removed."
+annex.64.d:0 "센트로아메리카는 합병되었고, 우리 군대는 과테말라에서 행진하고 있습니다. 이 지역 안정의 주된 위협이 제거되었습니다."
 annex.64.a:0 "점령하라"
 annex.64.b:0 "산 살바도르와 과테말라를 해방하라!"
 annex.64.c:0 "센트로아메리카를 해방하라!"
 annex.65.t:0 "연합주의 운명"
-annex.65.d:0 "The United Provinces have been annexed, our troops are parading in Managua. A major threat to the stability in the region has been removed."
+annex.65.d:0 "연합주는 합병되었고, 우리 군대는 마나과에서 행진하고 있습니다. 이 지역 안정의 주된 위협이 제거되었습니다."
 annex.65.a:0 "군사점령을 계속해라!"
 annex.65.b:0 "독립국가로 해방하라!"
 annex.65.c:0 "연합주를 해방하라!"
 annex.66.t:0 "스페인의 운명"
-annex.66.d:0 "On the aftermath of the recent conflicts, we ended up controlling a number of territories that once belonged to the Spanish state. What should we do about them now?"
+annex.66.d:0 "최근의 분쟁의 여파로, 결국 우리는 한때 스페인에 속했던 많은 영토를 통제하게 되었습니다. 이제 그들을 어떻게 해야 할까요?"
 annex.66.a:0 "카를로스파들을 넘겨주자"
 annex.66.b:0 "스페인 왕국이 다시 통치하도록한다"
 annex.66.c:0 "전국노동자연합이 다시 통치하도록한다"
@@ -264,11 +264,11 @@ annex.75.f:0 "오스트리아의 통제를 받는 독일 제국을 만들자!"
 annex.75.g:0 "독일인들은 못 믿는다, 전체를 점령하는 것이 더 좋을 것이다"
 annex.75.h:0 "독일 제국이 우리와 함께한다면, 독일 스스로 통치하도록 두자!"
 annex.76.t:0 "빈 조약?"
-annex.76.d:0 "With eastern Europe under firm Austrian military control there is not even slight hope for our government to return to the mainland, unless we accept offer from Austria, in which they promise us to return pre-war territory in return for peace treaty and recognition of all their territorial gains in Europe."
+annex.76.d:0 "동부 유럽이 오스트리아의 강력한 군사 통제 하에 있기 때문에, 우리 정부는 평화 조약을 맺고 유럽에서 오스트리아가 얻은 영토를 모두 인정하면 전쟁 전 영토를 돌려주겠다는 오스트리아의 제안을 받아들이지 않는 한 본토로 돌아갈 가능성은 희박합니다."
 annex.76.a:0 "우린 선택지가 없다" 
 annex.76.b:0 "제안을 받아들이지 않을 것이다!"
 annex.77.t:0 "빈 조약"
-annex.77.d:0 "Government of the German Empire seeing no other choice, accepted our offer bringing Austria to new level of power, not experienced from our humiliating defeat in 1866! In accordance with our agreement, we are now giving German provinces we conquered back to the German Empire."
+annex.77.d:0 "독일 제국 정부는 달리 선택의 여지가 없었으며, 1866년 치욕적인 패배를 경험하지 못한 독일 정부는 오스트리아를 새로운 수준의 열강으로 올려놓으라는 우리의 제안을 받아들였습니다! 우리의 합의에 따라, 우리는 이제 우리가 정복한 독일 영토를 독일 제국에 반환할 것입니다."
 annex.77.a:0 "A small price for a great victory"
 annex.78.t:0 "독일 제국의 가장 어두운 시간"
 annex.78.d:0 "We will now honour the treaty of Vienna and comply to all Austrian demands..."
