--- a/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
@@ -309,17 +309,17 @@ ALB_new_farming_techniques:0 "새로운 농업 기술"
 ALB_new_farming_techniques_desc:0 "As it stands, the peasant farmers in Albania use outdated equipment and farming techniques. Many of our farmers can only afford to own wooden plows and rely on subsistence farming as their primary farming method. If we are to improve the conditions of Albanian farmers and increase our agricultural output, it is crucial that we teach our farmers new farming techniques and upgrade their equipment."
 ALB_trade_agreements:0 "무역 협정"
 ALB_trade_agreements_desc:0 "By enacting trade agreements with our neighbours, we can simultaneously improve relations while mutually benefiting from the economic benefit that comes from doing so. This will allow us to increase the amount of economic activity in Albania which will help us better combat the after effects of Black Monday."
-ALB_improve_sharecroppping:0 "Improve Sharecropping"
+ALB_improve_sharecroppping:0 "소작 제도 개선"
 ALB_improve_sharecroppping_desc:0 "Currently, our peasant farmers and sharecroppers continue to use outdated equipment, such as wooden plows, and, as a result, the amount of work they can do alongside their efficiency suffers because of how ill equipped they are to handle various situations. By upgrading their tools, we can ensure the uptick of agricultural output within Albania."
 ALB_fund_the_bank:0 "은행에 자금 지원"
 ALB_fund_the_bank_desc:0 "After Black Monday, many of the upper class were forced to pull out their funds from the bank which, in turn, left our bank on the brink of destruction. By incentivising the wealthy to invest in the banks, we can fill up the state’s coffer and better carry out the function of the bank while assisting companies and/or nobles who need the money."
-ALB_minor_industrialisation:0 "Minor Industrialisation"
+ALB_minor_industrialisation:0 "소규모 산업화"
 ALB_minor_industrialisation_desc:0 "Ahmet Zogu, the Prime Minister, has managed to convince Shefqet Vërlaci, the party leader, to enact a minor industrialisation programme in order to catch up to the rest of Europe and better fight the after effects of Black Monday. This programme will, however, be closely monitored by the landowning aristocracy so to not divert profit away from sharecropping and damage the current system in place."
 ALB_increased_agricultural_output:0 "농업 산출량 증대"
 ALB_increased_agricultural_output_desc:0 "By teaching our peasant farmers and sharecroppers new farming techniques, and gradually weening them off of subsistence farming, we can increase the agricultural output of the state as farmers will no longer produce for purely themselves and/or their families, but for the benefit of the state as well."
 ALB_tax_incentives:0 "감세 조치"
 ALB_tax_incentives_desc:0 "Providing businesses with special tax benefits and exemptions will be extremely useful in that they will set up branches in Albania, thereby increasing economic activity in our nation and, in turn, helping us better combat the effects of Black Monday through external investment."
-ALB_enact_deflation_measures:0 "Enact Deflation Measures"
+ALB_enact_deflation_measures:0 "디플레이션 조치 시작"
 ALB_enact_deflation_measures_desc:0 "Enacting deflation measures and removing a certain amount of lek from circulation will allow us to reverse the inflation of the currency under Black Monday and assist the banks by beginning the stabilisation of our currency and, hopefully, maintaining that stability."
 ALB_oil_drilling:0 "석유 채굴"
 ALB_oil_drilling_desc:0 "By extracting the vast oil resources of Albania that exist in areas such as Patos-Marinza, Kuçoca, and Driza, we can boost our economic output through the exchange of natural resources and make Albania a desirable area for investment."
@@ -409,7 +409,7 @@ ALB_abolition_of_republican_institutions:0 "Abolition of Republican Institutions
 ALB_abolition_of_republican_institutions_desc:0 "We must begin to remove the pre-existing framework of republican institutions that were set up during the time of the Republic of Albania. These systems are obsolete, against our interests, and serve no purpose other than to empower the rabble. We will, of course, face heavy opposition."
 ALB_prioritise_the_needs_of_catholics:0 "Prioritise the Needs of Catholics"
 ALB_prioritise_the_needs_of_catholics_desc:0 "By prioritising the needs of Catholics, and redistributing land to them, we can reduce the influence of the predominantly Muslim landowners within Albania while as empowering people who will, hopefully, remain loyal to our cause."
-ALB_cementing_the_power_of_the_king:0 "Cementing Wied's Power"
+ALB_cementing_the_power_of_the_king:0 "비드의 권력 강화"
 ALB_cementing_the_power_of_the_king_desc:0 "It is clear that we must begin to turn our attention to cementing the power of Wied, and ensure that the Albanian people begin to permanently accept him as the new King of Albania. Long live Skanderbeg II!"
 ALB_setting_up_austrian_companies:0 "Setting up Austrian Companies"
 ALB_setting_up_austrian_companies_desc:0 "By allowing Austrian companies to set up local branches in Albania, we can further increase industrial output within our nation while also further promoting the Austrian cause."
@@ -467,21 +467,21 @@ ALB_economic_miracle_idea:0 "경제적 기적"
 ALB_economic_miracle_idea_desc:0 "Through the use of deflation measures, improving the conditions of sharecroppers, granting companies tax incentives to open branches in Albania, and general increased agricultural output, we have managed to bring about an economic golden age to Albania, with some dubbing the event as the Albanian Economic Miracle."
 ALB_polarised_nation_idea:0 "양극화된 국가"
 ALB_polarised_nation_idea_desc:0 "With the establishment of an independent Albania, two parties in Albania have managed to take power. The social democratic Unity Party led by Avni Rrustemi and the social conservative Progressive Party led by Shefqet Vërlaci. With the two parties having differing goals, yet both having vast influence, it’s no wonder that, in recent years, Albania has become such a politically polarised nation..."
-ALB_feudal_system_ended:0 "Dissolution of the Feudal System"
+ALB_feudal_system_ended:0 "봉건제 해체"
 ALB_feudal_system_ended_desc:0 "We have managed to free the common Albanians from the yoke of the aristocrats and landowners, giving them free will and free reign over their own lives. This is truly a momentous and glorious day for the common man!"
 ALB_arm_of_gendarmerie_idea:0 "헌병대"
 ALB_arm_of_gendarmerie_idea_desc:0 "Investment into the Arm of Gendarmerie is crucial if we are to protect Albania from elements that seek to destroy and/or destabilise it from both within and without."
-ALB_improved_sharecropping_idea:0 "Improved Sharecropping"
+ALB_improved_sharecropping_idea:0 "소작 제도 개선"
 ALB_improved_sharecropping_idea_desc:0 "Through providing our peasant farmers and sharecroppers with upgraded tools, we can ensure that their agricultural output improves while granting them better conditions."
 ALB_fund_bank_idea:0 "은행에 자금 지원"
 ALB_fund_bank_idea_desc:0 "By incentivising the wealthy to invest in the banks, we can fill up the state’s coffer and better carry out the function of the bank while assisting companies and/or nobles who need the money."
 ALB_increased_agricultural_output_idea:0 "농업 생산량 증대"
 ALB_increased_agricultural_output_idea_desc:0 "By introducing new farming methods to our peasant farmers and sharecroppers, thereby weening them off of subsistence farming, we can ensure that they produce for not only themselves but for the state and the landowners, increasing our agricultural output as a whole."
-ALB_deflation_measures_idea:0 "Deflation Measures"
+ALB_deflation_measures_idea:0 "디플레이션 조치"
 ALB_deflation_measures_idea_desc:0 "By removing a certain amount of lek from circulation, we can ensure that we can better deal with the effects of inflation caused by Black Monday and stabilise our currency. This will come at the cost of lower production capabilities, however."
 ALB_universal_health_care_idea:0 "보편적 의료"
 ALB_universal_health_care_idea_desc:0 "Fan Noli's idea of universal health care, funded by the state through taxes, will help improve living conditions for regular Albanians alongside assisting the stabilisation of the birth rate."
-ALB_assert_sovereignty_idea:0 "Assert Albanian Sovereignty"
+ALB_assert_sovereignty_idea:0 "알바니아 주권 주장"
 ALB_assert_sovereignty_idea_desc:0 "We shall never let Albania fall to the Austrian or Serbian menace! We shall unite Albanians all around the world and ensure that Albania remains stable, free, and democratic for centuries! Long live Albania and long live the Albanian people!"
 ALB_civil_liberties_idea:0 "시민 자유 확대"
 ALB_civil_liberties_idea_desc:0 "Granting extended rights and liberties to our people who have been oppressed by the upper class for far too long is paramount to the reformation of a democratic, just, and free Albania."
