--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -80,13 +80,13 @@ GEA_budget2_desc:0 "아프리카에 있는 우리 친구들과는 달리, 우리
 GEA_budget3:0 "부담 나누기"
 GEA_budget3_desc:0 "현지 유럽 정착민들은 오랫동안 우리의 보호 혜택을 누렸으며 그들이 누린것에 비해 아주 적은 세금을 냈습니다. 하지만 우리가 식민지를 운영하기 위해 그들의 협력에 의존하고 있으며 또 너무 멀리 갈 수 없기 때문에, 그들과 합의를 하는 것이 더 나을 것입니다."
 GEA_budget4:0 "식민지 관료 강화"
-GEA_budget4_desc:0 "독일 동아시아 회사는 자신들의 의지를 실행하기 위한 제대로 기능하는 행정부를 가진 적이 없습니다. 이제 식민지 혼란의 결과로 관료주의를 확대하고 우리 식민지에 대한 직접적인 지배를 확립할 때입니다."
+GEA_budget4_desc:0 "독일령 동아시아는 자신들의 의지를 실행하기 위한 제대로 기능하는 행정부를 가진 적이 없습니다. 이제 식민지 혼란의 결과로 관료주의를 확대하고 우리 식민지에 대한 직접적인 지배를 확립할 때입니다."
 GEA_budget5:0 "[GetNameGEAIndochina] Pacification"
-GEA_budget5_desc:0 "[GetNameGEAIndochina], 는 독일 동아시아 회사 행정부의 핵심적인 부분이자 경제 중심지입니다. 베트콩 저항 세력 폭도들이 어렴풋이 나타남에 따라서 그것을 진정시키고 확고히 할 필요가 있습니다."
+GEA_budget5_desc:0 "[GetNameGEAIndochina], 는 독일령 동아시아 행정부의 핵심적인 부분이자 경제 중심지입니다. 베트콩 저항 세력 폭도들이 어렴풋이 나타남에 따라서 그것을 진정시키고 확고히 할 필요가 있습니다."
 GEA_budget6:0 "싱가포르의 공장들"
 GEA_budget6_desc:0 "싱가포르에는 현재 의미있는 중공업이 없습니다. 일부 독일의 기업들이 아시아 진출에 관심이 있지만 투자를 시작하기 전에 우리의 지원을 요청합니다. 새로운 공장들은 고용을 늘리고 상황을 진정시킬 것입니다."
 GEA_budget7:0 "말라야 강화"
-을GEA_budget7_desc:0 "말라야는 독일 동아시아 회사의 빛나는 보석이자 우리 행정부의 운영 중심지이지만, 검은 월요일의 결과로 폭력적인 반란에 방해받았습니다. 우리는 우편 제도의 도입을 모색해봐야 할것이며, 지역 저항 세력을 진정시키기 위한 벙커와 보루가 필요합니다. 이것은 또한 적군의 지상 공격에도 도움이 될 것입니다."
+을GEA_budget7_desc:0 "말라야는 독일령 동아시아의 빛나는 보석이자 우리 행정부의 운영 중심지이지만, 검은 월요일의 결과로 폭력적인 반란에 방해받았습니다. 우리는 우편 제도의 도입을 모색해봐야 할것이며, 지역 저항 세력을 진정시키기 위한 벙커와 보루가 필요합니다. 이것은 또한 적군의 지상 공격에도 도움이 될 것입니다."
 GEA_budget8:0 "[GetNameGEAIndochina] 투자"
 하GEA_budget8_desc:0 "[GetNameGEAIndochina] 의 직물 공장의 새로운 재봉 기술을 개발하고 확장하기 위해 더 많은 자금을 요구해야 합니다. 이 자금을 마련하는것은 지역 주민들로 하여금 우리를 좋아하게 만들며 장기적으로 새로운 수익을 가져다 줄 것입니다. 이것은 경제 회복과 사회 안정에 도움이 될 것입니다."
 GEA_budget9:0 "지역 무기 주조 공장"
@@ -116,7 +116,7 @@ GEA_air3_desc:0 "우리의 조종사들은 우리의 요구에 맞는 최상의 
 GEA_air4:0 "포케볼프 동아시아 자회사"
 GEA_air4_desc:0 "포케볼프사는 우리의 지역 노동력과 자원을 이용하기 위해 동아시아 자회사를 설립하는 것에 관심을 표명했습니다. 우리는 이번 모험에서 그들을 전폭적으로 지원해야 합니다."
 GEA_air5:0 "동아시아 팔슈름예거"
-GEA_air5_desc:0 "폰 뮐케 제독은 오래전부터 팔슈름예거와 그들의 강력한 규율에 감탄하여 왔습니다. 최근 그는 이곳 동아시아에서 엘리트 사단을 훈련시키고 지휘하겠다고 제안한 "늑대" 디트리히 뷜츠와 접촉하였습니다."
+GEA_air5_desc:0 "폰 뮈케 제독은 오래전부터 팔슈름예거와 그들의 강력한 규율에 감탄하여 왔습니다. 최근 그는 이곳 동아시아에서 엘리트 사단을 훈련시키고 지휘하겠다고 제안한 "늑대" 디트리히 뷜츠와 접촉하였습니다."
 GEA_air6:0 "베를린으로부터의 전투기 요청"
 GEA_air6_desc:0 "지금 우리가 지역적으로 몇몇 비행기를 생산하는 동안, 우리는 여전히 우리가 현재 생산할 수 있는 것보다 더 많은 것을 요구하고 있습니다. 우리는 그 사이의 격차를 메우기 위해 베를린 전투기 사중주를 요청할 것입니다."
 GEA_navy1:0 "대함대"
@@ -174,11 +174,11 @@ GEA_marine3_desc:0 "인도 차이나의 가혹한 정글은 오랫동안 제국,
 GEA_internal1:0 "현지 엘리트들과의 협업"
 GEA_internal1_desc:0 "우리의 내부 통치는 프랑스와 영국의 식민지 제도가 우리의 직접 통치하는 영토 외에도 계승되었기 때문에 혼란스럽기도 하고 구식이기도 합니다. 우리는 이 상황을 개선하기 위해 지역 엘리트들과의 긴밀한 협력을 촉진하기로 결정했습니다."
 GEA_internal2:0 "우리의 연대를 강화하다"
-GEA_internal2_desc:0 "대제독 폰 뮐케는 우리의 지역 파트너들과 중요한 협의를 진행할 것이고, 그가 말한 매력과 샴페인의 접근법은 그가 희망하는 만큼 효과가 없을수도 있지만 우리는 회의를 지원할 것입니다." 
+GEA_internal2_desc:0 "대제독 폰 뮈케는 우리의 지역 파트너들과 중요한 협의를 진행할 것이고, 그가 말한 매력과 샴페인의 접근법은 그가 희망하는 만큼 효과가 없을수도 있지만 우리는 회의를 지원할 것입니다." 
 GEA_internal3:0 "중소기업 지원"
 GEA_internal3_desc:0 "우리는 독일의 대기업을 넘어서 현지 기업들을 지원함으로써 경제가 회복되도록 도울 수 있습니다. 이것은 지역 주민들의 번영과 고용을 보장하고 그들이 반란에 참여하는 것을 막아 줄 것입니다."
 GEA_internal4:0 "새로운 해군성"
-GEA_internal4_desc:0 "독일 동아시아 회사는 영토를 가진 함대가 아닌 적절한 행정부로서 천천히 발전하면서, 동아시아의 역할에 대한 재평가가 시작되었습니다."
+GEA_internal4_desc:0 "독일령 동아시아는 영토를 가진 함대가 아닌 적절한 행정부로서 천천히 발전하면서, 동아시아의 역할에 대한 재평가가 시작되었습니다."
 GEA_johor1:0 "말라야 해결책"
 GEA_johor1_desc:0 "조호르 술탄은 말라야 술탄국의 핵심 인물이었으며 우리 규칙을 쉽게 받아들입니다. 그는 이제 이전 영국 행정부의 잘못을 바로 잡을 수 있도록 더 많은 양보를 요청하며, 우리는 이것이 개정 될 수 있다는것에 동의합니다."
 GEA_johor2:0 "지역 독점 기업과의 협업"
