--- a/Kaiserreich Korean Translation/localisation/KR_Liberia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Liberia_l_english.yml
@@ -6,11 +6,11 @@ LBR_radical_socialist_party_long:0 "라이베리아 민주 대회"
 LBR_totalist_party:0 "LBD"
 LBR_totalist_party_long:0 "라이베리아 운명당"
 LBR_social_liberal_party:0 "WP"
-LBR_social_liberal_party_long:0 "Whig Party"
+LBR_social_liberal_party_long:0 "휘그당"
 LBR_market_liberal_party:0 "TRP"
 LBR_market_liberal_party_long:0 "진정한 공화당"
 LBR_social_conservative_party:0 "TWP"
-LBR_social_conservative_party_long:0 "True Whig Party"
+LBR_social_conservative_party_long:0 "진짜휘그당"
 LBR_authoritarian_democrat_party:0 "DLB"
 LBR_authoritarian_democrat_party_long:0 "독일 라이베리아 연맹"
 LBR_paternal_autocrat_party:0 "MJ"
@@ -54,12 +54,12 @@ LBR_military_academy:0 "The Daniel E Howard Military Academy"
 firestone_rubber:0 "Firestone Rubber"
 
 ### Tooltips ###
-LBR_firestone_slaves:0 "Condones Slavery"
-LBR_freemason_purge_1:0 "Purge of Foreigners"
-LBR_freemason_purge_2:0 "Purge of Socialists"
-LBR_freemason_purge_3:0 "Purge of Republicans"
-LBR_1939_elections_happened:0 "1939 elections have been held\n"
-LBR_receive_militias:0 "Receive three divisions of militia\n"
+LBR_firestone_slaves:0 "노예제도 묵과"
+LBR_freemason_purge_1:0 "외국인 숙청"
+LBR_freemason_purge_2:0 "사회주의자 숙청"
+LBR_freemason_purge_3:0 "공화주의자 숙청"
+LBR_1939_elections_happened:0 "1939 년 선거가 열릴 것입니다\n"
+LBR_receive_militias:0 "민병대 3사단을 받을 것입니다\n"
 
 ### Events ###
 LBR.1.t:0 "Liberian Introduction"
@@ -162,7 +162,7 @@ LBR.54.a:0 "Send the French the peace proposal"
 LBR.54.b:0 "We are not ready for peace yet"
 
 LBR.55.t:0 "The Liberians Offer Peace!"
-LBR.55.d:0 " After an improbable victory of the pseudo-Americans in Liberia, we have retreated. The Liberian Army is securing its gains and preparing to move inland, but they offer to end all hostilities if we cede them Sierra Leone."
+LBR.55.d:0 "After an improbable victory of the pseudo-Americans in Liberia, we have retreated. The Liberian Army is securing its gains and preparing to move inland, but they offer to end all hostilities if we cede them Sierra Leone."
 LBR.55.a:0 "Let the American and English fools rejoyce"
 LBR.55.b:0 "Never! French Honour is on the line!"
 
@@ -229,6 +229,10 @@ LBR.91.b:0 "We have no need of an ally such as them"
 LBR.92.t:0 "[From.GetNameDefCap] Refuses"
 LBR.92.d:0 "The [From.GetAdjective] government has refused our request to join their alliance. Perhaps we are not syndicalist enough for their measure, or unworthy as an ally. Either way, the answer was clearly no."
 LBR.92.a:0 "The Negro Worker magazine lied?"
+
+LBR.93.t:0 "America Has Fallen"
+LBR.93.d:0 "It seems the American government has collapsed in the face of its civil war. For better or worse, we are now on our own."
+LBR.93.a:0 "So be it"
 
 ### Focuses ###
 LBR_assess_economy:0 "Assess the Economy"
