--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -148,7 +148,7 @@ annex.50.t:0 "호헨촐레른가에서 차르를 뽑아라"
 annex.50.d:0 "독일이 호헨촐레른가의 사람을 러시아의 왕좌에 앉혔고, 그는 동방정교회로 개종했지만, '이반 7세'가 러시아를 통치하기는 쉬워보이지 않습니다."
 annex.50.a:0 "대체 역사에는 더 끔찍한 일도 있는법이니까, 뭐."
 annex.51.t:0 "우리의 새로운 총리"
-annex.51.d:0 "조금 전에, 독일은 파벨 베르몬트-아벨로프이 러시아를 이끌도록 '제안'되었고, 곧 우리의 새로운 지도자가 되었습니다. 우리가 이제 더 이상 독일과 싸우지 않기 때문에 그는 국민들의 지지를 받고 있습니다."
+annex.51.d:0 "조금 전에, 독일은 파벨 베르몬트-아벨로프가 러시아를 이끌도록 '제안'하였고, 파벨 베르몬트-아벨로프는 곧 우리의 새로운 지도자가 되었습니다. 우리가 이제 더 이상 독일과 싸우지 않기 때문에 그는 국민들의 지지를 받고 있습니다."
 annex.51.a:0 "점령보다는 낫지..."
 annex.52.t:0 "미국의 운명"
 annex.52.d:0 "아메리카 대륙에서의 오랜 전투 후에, 우리는 전면적인 공격을 개시했고 미국이 항복하도록 했습니다. 워싱턴과 미국 전체의 운명은 이제 우리 손에 달려 있습니다!"
