Reichspakt -> 제국 협정

--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -234,7 +234,7 @@ HOL_the_united_state:0 "합중국"
 HOL_the_united_state_desc:0 "We ought to show unity at all times. Let us stand united as Dutchmen versus the world."
 HOL_foreign_policy:0 "네덜란드 외교 정책"
 HOL_foreign_policy_desc:0 "Now that we have stabilised our political order, it is time to look outwards again and examine whether we should re-emphasise our self-imposed neutrality or find allies in this new hostile world."
-HOL_join_mitteleuropa:0 "Reichspakt에 가입"
+HOL_join_mitteleuropa:0 "제국 협정에 가입"
 HOL_join_mitteleuropa_desc:0 "Ever since the Boer War, we have been drifting towards the German cause, and if the Reichspakt falls to the godless syndicalists then we are likely finished as well. Let us fight for our own fate instead of having it forced upon us!"
 HOL_sustain_neutrality:0 "중립국 선언"
 HOL_sustain_neutrality_desc:0 "The Netherlands suffers from enough troubles without joining a devastating global conflict. We shall work with whomever reigns supreme after the conflict, as we have done many times before."
@@ -1042,7 +1042,7 @@ hol.22.d:0 "The Netherlands' hopeless position surrounded by hostile superpowers
 hol.22.a:0 "They are welcome!"
 hol.22.b:0 "Only a Dutchman. No."
 
-hol.23.t:0 "네덜란드와 Reichspakt"
+hol.23.t:0 "네덜란드와 제국 협정"
 hol.23.d:0 "Under threat from the political forces of left and right, and surrounded by the hostile forces of syndicalists in Britain and France, the Dutch have come to us requesting a military alliance. While they had once considered joining us during the Weltkrieg, it appears that the situation is currently dire enough for them come down on our side."
 hol.23.a:0 "The Dutch are our cousins. Welcome!"
 hol.23.b:0 "Nein."
@@ -1068,7 +1068,7 @@ hol.27.d:0 "The Dutch government-in-exile has announced recently that they want 
 hol.27.a:0 "While odd, the Dutch could be useful allies."
 hol.27.b:0 "Westerners? No way."
 
-hol.28.t:0 "네덜란드 망명 정부가 Reichspakt에 가입하려 하다"
+hol.28.t:0 "네덜란드 망명 정부가 제국 협정에 가입하려 하다"
 hol.28.d:0 "The Dutch government-in-exile has announced recently that they want to join the Reichspakt. It is not a completely unforeseen move because pro-German policy is popular in many circles including the ruling cabinet and the army. Do we want to allow the exiled royals to join our alliance?"
 hol.28.a:0 "Jawohl!"
 hol.28.b:0 "Why would we want the Dutch?"
@@ -1081,7 +1081,7 @@ hol.30.t:0 "일본이 네덜란드의 공영권 가입을 거부하다!"
 hol.30.d:0 "It seems the Japanese do not want us in their alliance..."
 hol.30.a:0 "Such a miserable mistake."
 
-hol.31.t:0 "독일이 네덜란드의 Reichspakt 가입을 거부하다!"
+hol.31.t:0 "독일이 네덜란드의 제국 협정 가입을 거부하다!"
 hol.31.d:0 "It seems the Germans do not want us in their alliance..."
 hol.31.a:0 "Such a miserable mistake."
 
@@ -2136,7 +2136,7 @@ holfocus.68.t:0 "라인 선"
 holfocus.68.d:0 "One of the policies of the VNH to recover from Black Monday was a keynesian project to have people build fortifications along the Rhine as a safeguard against a hypothetical advance of the syndicalists from France. This way, it was argued, did the government both spend money to increase the purchasing power of the common man, while also making preparations for the future."
 holfocus.68.a:0 "No syndicalist shall set foot beyond the Rhine!"
 
-holfocus.69.t:0 "[HOL.GetNameDefCap]이(가) Reichspakt에 가입하기를 원하다"
+holfocus.69.t:0 "[HOL.GetNameDefCap]이(가) 제국 협정에 가입하기를 원하다"
 holfocus.69.d:0 "The Dutch have expressed their desire to join the Reichspakt military alliance. How should we respond?"
 holfocus.69.a:0 "Welcome!"
 holfocus.69.b:0 "We don't need them."
