--- a/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afghanistan_l_english.yml
@@ -51,7 +51,7 @@ afg.9.a:0 "더 나은 내일을 기대한다."
 
 afg.10.t:0 "혼돈 속의 아프가니스탄!"
 afg.10.d:0 "최선의 노력에도 불구하고, 반군 세력이 카불에서 아마눌라 왕의 군대를 밀어 내고 국가를 장악하였습니다!"
-afg.10.b:0 "나 장군의 여단은 모든 저항을 물리치고 그를 왕으로 선포한다!"
+afg.10.b:0 "나디르 장군의 여단은 모든 저항을 물리치고 그를 왕으로 선포한다!"
 
 afg.14.t:0 "모하메드 나디르 샤의 왕좌 주장"
 afg.14.d:0 "그렇게 우호적인 방법이 아니고 왕실과의 관계에도 불구하고 왕좌를 차지한, 모하메드 나디르 샤는 그의 정권을 뒷받침하기 위해 합법성을 절실히 필요로 합니다. 파슈툰인 지도자들이 폐하의 승천을 지지하기 위해 '로야 지르가'(왕의 통치)를 전하는 것이 좋습니다."
