--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -829,11 +829,11 @@ canada.68.b:0 "우리는 민주주의를 복원할 것이다!"
 canada.68.c:0 "아니! 미국을 보이콧하고 국경을 폐쇄하자!"
 
 canada.69.t:0 "에드워드 8세는 후버에게 편지를 보냈다"
-canada.69.d:0 "대영 제국의 새로운 왕인 에드워드 8세는 미국의 불안정함이 증가함에 따라 허버트 후버 대통령에게 친서를 보내기로 결정했습니다. 언론은 내용을 모르지만, 왕은 과격파 캐나다와 그의 동맹국들이 선택하는 경우에도 미국의 국경선을 침범하고 싶지 않기 때문에 과감한 조치를 취해야 할 것이라고 대통령에게 경고한 것으로 보입니다."
+canada.69.d:0 "대영 제국의 새로운 왕인 에드워드 8세는 미국의 불안정함이 증가함에 따라 허버트 후버 대통령에게 친서를 보내기로 결정했습니다. 언론은 내용을 모르지만, 왕은 대통령이 '급진파를 선택할 경우' 캐나다와 동맹국들이 과감한 조치를 취할 것이며, 캐나다-아메리카 국경의 안정을 해치고 싶지 않다고 경고했다 추측합니다."
 canada.69.a:0 "그래, 내가 뭘 할 수 있는데?"
 
 canada.70.t:0 "에드워드 8세는 맥아더에게 편지를 보냈다"
-canada.70.d:0 "미국의 내부적인 문제들로 인해 에드워드 8세와 수상이 미국의 가장 강력한 정치적 환경 배후의 인물인 미 육군과 대화하게 되었습니다. 친서에는, 에드워드 8세는 미국의 안정을 원한다고 말했고, 그는 미국을 캐나다가 지지하지 않을 것으로 보고 있습니다. 그 편지는 이 암울한 시기에 캐나다와 미국 사이의 결속을 강조하고 있습니다."
+canada.70.d:0 "미국의 내부적인 문제들로 인해 에드워드 8세와 매켄지 킹 수상이 미국의 가장 강력한 정치적 환경 배후의 인물인 미 육군과 대화하게 되었습니다. 친서에는, 에드워드 8세는 미국의 안정을 원한다고 말했고, 그는 미국을 캐나다가 지지하지 않을 것으로 보고 있지 않습니다. 그 편지는 이 암울한 시기에 캐나다와 미국 사이의 결속을 강조하고 있습니다."
 canada.70.a:0 "오 이런"
 
 canada.71.t:0 "캐나다가 우리를 지원한다!"
