독일어발음 수정

--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -780,8 +780,8 @@ l_english:
  STATE_778:0 "옘틀란드"
  STATE_779:0 "난치히"
  STATE_780:0 "바덴"
- STATE_781:0 "웨스트라인란트"
- STATE_782:0 "북부 슐레스비히"
+ STATE_781:0 "베스트라인란트"
+ STATE_782:0 "노드슐레스비히"
  STATE_783:0 "트렌티노"
  STATE_784:0 "부르겐란트"
  STATE_785:0 "플라투 로레인"
