--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -988,7 +988,7 @@ ausgleich.new.320.a:0 "멋지군."
 
 ausgleich.new.321.t:0 "대타협의 끝"
 ausgleich.new.321.d:0 "헝가리가 조기에 떠나기로 결정했습니다 - 대타협은 어제부로 끝났습니다."
-ausgleich.new.321.a:0 "끔하군."
+ausgleich.new.321.a:0 "끔찍하군."
 
 ausgleich.new.322.t:0 "헝가리는 대타협을 포기하다."
 ausgleich.new.322.d:0 "헝가리 대표단이 "오랜 전통의 얼간이짓"라고 부르는 올해의 협상은 끝이 났고 그들은 협의를 떠났습니다."
