--- a/Kaiserreich Korean Translation/localisation/KR_Mongolia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mongolia_l_english.yml
@@ -305,7 +305,7 @@ mongolia.1.d:0 "Only a few days have passed since the assassination of Kerensky,
 mongolia.1.a:0 "Stake our claims on the recognised Mongol lands!"
 mongolia.1.b:0 "The Chinese be Damned! Unification for ALL Mongolians!"
 mongolia.1.c:0 "It's not worth the risk"
-mongolia.2.t:0 "An Alliance With Tibet?"
+mongolia.2.t:0 "티베트와 동맹하시겠습니까?"
 mongolia.2.d:0 "There has been an increased interest in our neighbours, and some people in government are calling to send a political envoy to Tibet, as they hold a strategic position in relation to our enemies in the south. Unity with these fellow Buddhists could come handy in the near future..."
 mongolia.2.a:0 "Send the Envoy!"
 mongolia.2.b:0 "What do they have but yaks? Leave them be."
@@ -313,9 +313,9 @@ mongolia.3.t:0 "A Mongol Envoy Arrives"
 mongolia.3.d:0 "Our fellow Buddhists from beyond the Muslim lands in Mongolia have sent a diplomatic envoy. They seek cooperation and unity between our groups... how should we respond?"
 mongolia.3.a:0 "Welcome the Envoy! Unity for Historical Tibet!"
 mongolia.3.b:0 "We are a humble people - politely refuse."
-mongolia.4.t:0 "Tibet accepts our Offer"
+mongolia.4.t:0 "티베트가 제안을 수락했습니다"
 mongolia.4.d:0 "Tibet accepts our alliance. We will now work together to spread the word of Buddha."
-mongolia.4.a:0 "Great News!"
+mongolia.4.a:0 "좋은 소식이야!"
 mongolia.5.t:0 "Xibei Lianbang Yiyuan and the Mongol Minority"
 mongolia.5.d:0 "After we have laid claim to the region of Inner Mongolia, the True Mongols in Xibei Lianbang Yiyuan have begun fighting the Hui government."
 mongolia.5.a:0 "Send in troops to aid our brothers!"
@@ -486,11 +486,11 @@ mongolia.48.t:0 "Status of Macau"
 mongolia.48.d:0 "It's been hundreds of years since Macau became a Portuguese holding in 1557 by purchasing it from the Jiajing Emperor of the Ming dynasty. Now that the South lies in the hands of the Mongolians once more, the khan is considering whether to claim the port of Macau from the Portuguese or to not interfere with the ownership of the city sold before the rise of the Mongols."
 mongolia.48.a:0 "It belongs to China!"
 mongolia.48.b:0 "Let the idea slide."
-mongolia.49.t:0 "Mongol Demands"
+mongolia.49.t:0 "몽골의 요규"
 mongolia.49.d:0 "After centuries, the Mongol Khan now decided to demand Macau from us. The Mongol Empire is now one of the strongest states in the Far East and fighting them is probably not a good idea."
-mongolia.49.a:0 "We have no choice."
-mongolia.49.b:0 "They will have to fight for it!"
+mongolia.49.a:0 "달리 선택지가 없다."
+mongolia.49.b:0 "몽골은 계속 싸워야 할 것이다!"
 mongolia.50.t:0 "Concessions For Peace?"
 mongolia.50.d:0 "The war with Fengtian has so far been unsuccessful, and our enemy now occupies Chahar. Many within our government urge peace, lest our nation be reduced to rubble. To that end, we can offer Fengtian control of Chahar and Suiyuan in exchange for peace."
-mongolia.50.a:0 "Make the offer."
-mongolia.50.b:0 "Chahar is Mongolian."
+mongolia.50.a:0 "제안을 보내라."
+mongolia.50.b:0 "차하르는 몽골의 것이다."
