--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -98,7 +98,7 @@ POL_minority_rights:0 "소수층의 권리"
 POL_a_new_constitution:0 "새 헌법 제정"
 POL_lithuanian_shipbuilding:0 "리투아니아의 조선 기술"
 POL_new_trade_opportunities:0 "해군 장교 양성"
-POL_join_mitteleuropa:0 "미틀오이로파 가입"
+POL_join_mitteleuropa:0 "제국협정 가입"
 POL_german_advisors:0 "독일 고문단 초청"
 POL_join_economic_bloc:0 "유럽 경제 연합체 가입"
 POL_german_tech_sharing:0 "카이저 빌헬름 협회"
