--- a/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
@@ -7,7 +7,7 @@ RUS_JAP_ally_2:0 "공모하는 돼지들"
 RUS_JAP_ally_3:0 "공모하는 돼지들"
 RUS_JAP_ally_4:0 "동맹 거부"
 RUS_JAP_ally_5:0 "일본을 무시함"
-didnt_invite_rus:0 "우리를 무시하 "
+didnt_invite_rus:0 "우리를 무시함"
 extridate_ungern_bad:0 "운게른을 인도함"
 extridate_ungern_good:0 "운게른을 인도함"
 baron_leave_bad:0 "운게른의 운명"
@@ -30,7 +30,7 @@ JAP_threat:0 "일본이 우리를 배신함"
 JAP_FNG_exploit:0 "경제적 착취"
 JAP_railway_demand:0 "오만한 요구"
 JAP_GER_QIE_QIE:0 "원조를 해주었다!"
-JAP_GER_QIE_JAP:0 "지독한 개뗴들"
+JAP_GER_QIE_JAP:0 "지독한 개떼들"
 QIE_GER_ABANDON:0 "우리를 배신함"
 GER_QIE_NO_ALLY:0 "배신자"
 JAP_ALLIANCE:0 "동맹에 초대됨"
@@ -38,7 +38,7 @@ JAP_ALLIANCE_BAD:0 "공모하는 돼지들"
 SIAM_refused:0 "우리의 제안을 거부함"
 SIAM_refused_GER:0 "일본을 거부함"
 SNUBBED_JAPAN:0 "우리를 무시했다!"
-TRM_crackdown:0 "한국인 문제"
+TRM_crackdown:0 "한국 문제"
 vladivostok_puppet:0 "우리의 괴뢰국"
 
 ### World Tension ###
